# gitlab-languages

./: .flake8  .gitignore  .gitlab-ci.yml  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  Pipfile  README.md  README.rst  __init__.py  gitlab_languages.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: main.yml  publish.yml
gitlab_languages/: __main__.py  gitlab_languages.py
