[tool.poetry]
name = "gitlab-languages"
version = "2.2.0"
description = "Utility to generate a Prometheus data source"
authors = ["Max Wittig"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
prometheus-client = "^0.12.0"
maya = "^0.6.1"
python-gitlab = "^3.1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gitlab-languages = "gitlab_languages.__main__:main"
gitlab_languages = "gitlab_languages.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
