[tool.poetry]
name = "gitlab-languages"
version = "2.3.2"
description = "Utility to generate a Prometheus data source from programming languages inside GitLab repositores"
authors = ["Max Wittig"]
readme = "README.md"
repository = "https://github.com/max-wittig/gitlab-languages"
keywords = ["gitlab", "languages", "api", "python-gitlab", "prometheus", "metrics"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
    "Topic :: Utilities"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
prometheus-client = "^0.15.0"
maya = "^0.6.1"
python-gitlab = "^3.12.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gitlab-languages = "gitlab_languages.__main__:main"
gitlab_languages = "gitlab_languages.__main__:main"

[tool.isort]
profile = "black"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
